described mvc config, mapping urls, transfering data

--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -461,11 +461,11 @@
 
 
 @online{mvcOverview,
- author = {Smith, Steve},
- year = {14.10.2016},
+ author = {Microsoft},
+ year = {2018},
  title = {Overview of ASP.NET Core MVC},
  url = {https://docs.microsoft.com/en-us/aspnet/core/mvc/overview},
- urldate = {2017-03-09}
+ urldate = {2018-08-06}
 }
 
 
@@ -538,6 +538,15 @@
  title = {ASP.NET: Understanding OWIN, Katana, and the Middleware Pipeline},
  url = {http://johnatten.com/2015/01/04/asp-net-understanding-owin-katana-and-the-middleware-pipeline/},
  urldate = {2018-08-01}
+}
+
+
+@online{routeConvention,
+ author = {Microsoft},
+ year = {2017},
+ title = {Routing to controller actions in ASP.NET Core: Setting up Routing Middleware},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/mvc/controllers/routing?view=aspnetcore-2.1#setting-up-routing-middleware},
+ urldate = {2018-08-06}
 }
 
 
